--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
     <head>
         <title>Simple form app</title>
         <base href="/">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
         <link rel="stylesheet" href="public/stylesheets/bundle.css">
         <script src="public/scripts/bundle.js"></script>
     </head>
     <body ng-app="simpleFormApp">
-        <div ng-view></div>
+        <div ng-view class="container-fluid"></div>
     </body>
 </html>
